store-medusa/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: medusa-backend
spec:
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: medusa-backend
---
apiVersion: v1
kind: Service
metadata:
  name: medusa-storefront
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: medusa-storefront
