store-medusa/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medusa-ingress
  namespace: store-medusa-test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # Storefront
    - host: medusa-test.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medusa-storefront
                port:
                  number: 8000
    # Backend / Admin
    - host: medusa-test-api.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medusa-backend
                port:
                  number: 9000
